replace unmodifiable collections in Command.java